# Banshee

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  README.md  clippy.toml  docker-compose.yml
config/character_sheets/: default_agent.toml  libsql_agent.toml
crates/agent_runtime/: Cargo.toml
crates/ai_sdk_client/: Cargo.toml
crates/character_sheet/: Cargo.toml
crates/config/: Cargo.toml
crates/emotion_engine/: Cargo.toml
crates/emotion_engine/src/: appraisal.rs  lib.rs  occ.rs
crates/mcp_manager/: Cargo.toml
crates/persistence/: Cargo.toml
crates/utils/: Cargo.toml
scripts/: demo.sh  pre-commit.sh
