[workspace]
members = [
    "packages/core",
    "packages/plugin-bootstrap", 
    "packages/plugin-emotion",
    "packages/plugin-memory",
    "packages/plugin-web3",
    "packages/plugin-providers",
    "packages/runtime",
    "packages/cli",
    # Legacy crates (will be migrated)
    "crates/emotion_engine",
    "crates/mcp_manager", 
    "crates/character_sheet",
    "crates/agent_runtime",
    "crates/ai_sdk_client",
    "crates/persistence",
    "crates/config",
    "crates/utils"
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/your-username/banshee"

[workspace.dependencies]
# Core async runtime
tokio = { version = "1.14", features = ["full"] }
tokio-util = "0.7"

# Actor framework
actix = "0.13"
actix-web = "4.5"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Database
sqlx = { version = "0.7", features = ["postgres", "chrono", "uuid", "runtime-tokio-rustls"] }
redis = { version = "0.25", features = ["tokio-comp"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "stream"] }

# Utilities
uuid = { version = "1.8", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
thiserror = "1.0"

# Math and ML
nalgebra = "0.32"
rand = "0.8"

# Async traits
async-trait = "0.1"
futures = "0.3"

# Testing
rstest = "0.19"
tokio-test = "0.4"

# Development tools
criterion = "0.5"

# Additional dependencies for runtime
petgraph = "0.6"
config = "0.14"

[package]
name = "banshee"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Core framework
banshee-core = { path = "packages/core" }

# Legacy crates (being migrated)
banshee-emotion-engine = { path = "crates/emotion_engine" }
banshee-mcp-manager = { path = "crates/mcp_manager" }
banshee-character-sheet = { path = "crates/character_sheet" }
banshee-agent-runtime = { path = "crates/agent_runtime" }
banshee-ai-sdk-client = { path = "crates/ai_sdk_client" }
banshee-persistence = { path = "crates/persistence" }
banshee-config = { path = "crates/config" }
banshee-utils = { path = "crates/utils" }

tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }

